Error Mitigation/MagiCoder/Data/javax_script/javax_scriptOutputResult.txt
Sample: CompiledScript_3
----------------------------------------------------------------
output:
./Data/javax_script/javaFiles/CompiledScript_3.java:13: error: cannot find symbol
            CompiledScript script = engine.compile("function add(a, b) { return a + b; }");
                                          ^
  symbol:   method compile(String)
  location: variable engine of type ScriptEngine
1 error


================================================================

Sample: CompiledScript_4
----------------------------------------------------------------
output:
./Data/javax_script/javaFiles/CompiledScript_4.java:12: error: cannot find symbol
            CompiledScript script = engine.compile("function add(a, b) { return a + b; }");
                                          ^
  symbol:   method compile(String)
  location: variable engine of type ScriptEngine
1 error


================================================================

Sample: ScriptEngineManager_2
----------------------------------------------------------------
stdout:
Engine not found or creation failed.

================================================================

Sample: ScriptEngineManager_3
----------------------------------------------------------------
stdout:
Engine not found!

================================================================

Sample: ScriptEngineManager_4
----------------------------------------------------------------
stdout:
No engine found for mime type: text/javascript

================================================================

Sample: ScriptEngineManager_5
----------------------------------------------------------------
================================================================

Sample: SimpleBindings_2
----------------------------------------------------------------
stdout:
John

================================================================

Sample: SimpleBindings_4
----------------------------------------------------------------
stdout:
key1: value1
key2: value2

================================================================

Sample: SimpleBindings_5
----------------------------------------------------------------
stdout:
Bindings before clear: javax.script.SimpleBindings@b3d7190
Bindings after clear: javax.script.SimpleBindings@b3d7190

================================================================

Sample: SimpleScriptContext_1
----------------------------------------------------------------
stdout:
John

================================================================

Sample: SimpleScriptContext_2
----------------------------------------------------------------
stdout:
John

================================================================

Sample: SimpleScriptContext_4
----------------------------------------------------------------
stdout:
John
null

================================================================

Sample: SimpleScriptContext_6
----------------------------------------------------------------
================================================================

